Add tickets panel

--- a/css/worklog.css
+++ b/css/worklog.css
@@ -144,3 +144,17 @@ body {
 .panel-yellow > a:hover {
   color: #df8a13;
 }
+.panel-red {
+  border-color: #d9534f;
+}
+.panel-red > .panel-heading {
+  border-color: #d9534f;
+  color: white;
+  background-color: #d9534f;
+}
+.panel-red > a {
+  color: #d9534f;
+}
+.panel-red > a:hover {
+  color: #b52b27;
+}
