--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,187 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<head lang="en">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="description" content="Work log for Sunset Park Elementary School Admins to use.">
+		<meta name="keywords" content="work log">
+		<meta name="robots" content="index, follow">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<base href="#">
+		<!-- TODO add an icon
+		<link rel="icon" href=""> -->
+		<title>Admin's Work Log</title>
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
+		
+        <!-- metisMenu CSS -->
+        <link rel="stylesheet" type="text/css" href="/stylesheets/metisMenu.min.css">
+
+		<!-- Custom CSS -->
+		<link rel="stylesheet" type="text/css" href="/stylesheets/worklog.css">
+
+        <!-- Morris Charts CSS -->
+        <link rel="stylesheet" type="text/css" href="/stylesheets/morris.css">
+		
+		<!-- Custom Fonts -->
+		<link rel="stylesheet" type="text/css" href="/stylesheets/font-awesome.min.css">
+	</head>
+	<body>
+		<% include templates/navigation.ejs %>
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header"><%= title %></h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-calendar fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge">26</div>
+                                    <div>What's going on today!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="calendar.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">View Details</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-tasks fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge">12</div>
+                                    <div>New Projects!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="projects.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">View Details</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-yellow">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-bell fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge">124</div>
+                                    <div> New Notifications!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="notifications.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">View Details</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-red">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-ticket fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge">13</div>
+                                    <div>New Support Tickets!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="tickets.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">View Details</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
+
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Tickets Chart Example
+                            <div class="pull-right">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu pull-right" role="menu">
+                                        <li><a href="#">Action</a>
+                                        </li>
+                                        <li><a href="#">Another action</a>
+                                        </li>
+                                        <li><a href="#">Something else here</a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li><a href="#">Separated link</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <!-- /.col-lg-8 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.page-wrapper -->
+
+		<!-- jQuery -->
+		<script type="text/javascript" src="/js/jquery-3.2.0.min.js"></script>
+
+		<!-- Bootstrap Core JavaScript -->
+		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+
+        <!-- metis Menu Plugin JavaScript -->
+        <script type="text/javascript" src="/js/metisMenu.min.js"></script>
+
+        <!-- Morris Charts JavaScript -->
+        <script type="text/javascript" src="/js/raphael.min.js"></script>
+        <script type="text/javascript" src="/js/morris.min.js"></script>
+        <script type="text/javascript" src="/js/data/morrisData.js"></script>
+
+        <!-- Sidebar JavaScript -->
+        <script type="text/javascript" src="/js/sideBar.js"></script>
+	</body>
 </html>
