Carry over changes made previously to index.html for navigation.ejs

--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,19 +1,18 @@
-
-		<!-- Navigation -->
-		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">Work Log</a>
-			</div>
-			<!-- /.navbar-header -->
-			
-			<ul class="nav navbar-top-links navbar-right">
-				<li class="dropdown">
+            </div>
+            <!-- /.navbar-header -->
+            
+            <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
@@ -22,7 +21,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 1</strong>
+                                        <strong>Project 1</strong>
                                         <span class="pull-right text-muted">40% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -38,7 +37,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 2</strong>
+                                        <strong>Project 2</strong>
                                         <span class="pull-right text-muted">20% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -54,7 +53,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 3</strong>
+                                        <strong>Project 3</strong>
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -70,7 +69,7 @@
                             <a href="#">
                                 <div>
                                     <p>
-                                        <strong>Task 4</strong>
+                                        <strong>Project 4</strong>
                                         <span class="pull-right text-muted">80% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
@@ -83,15 +82,15 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a class="text-center" href="#">
-                                <strong>See All Tasks</strong>
+                            <a class="text-center" href="projects.html">
+                                <strong>See All Projects</strong>
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
                     </ul>
                     <!-- /.dropdown-tasks -->
                 </li>
-				<!-- /.dropdown -->
+                <!-- /.dropdown -->
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
@@ -168,10 +167,10 @@
                     <!-- /.dropdown-user -->
                 </li>
                 <!-- /.dropdown -->
-			</ul>
-			<!-- /.navbar-top-links -->
+            </ul>
+            <!-- /.navbar-top-links -->
 
-			<div class="navbar-default sidebar" role="navigation">
+            <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
@@ -186,22 +185,36 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="calendar.html"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
+                                </li>
+                                <li>
+                                    <a href="projects.html"><span class="fa fa-tasks fa-fw"></span> Projects</a>
+                                </li>
+                                <li>
+                                    <a href="notifications.html"><span class="fa fa-bell fa-fw"></span> Notifications</a>
+                                </li>
+                                <li>
+                                    <a href="tickets.html"><span class="fa fa-ticket fa-fw"></span> Tickets</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-question fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="guide-configure-ipads.html">Configuring iPads</a>
+                                    <a href="guide-configure-ipads.html"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
                                 </li>
                                 <li>
-                                    <a href="guide-configure-printer.html">Configuring Printers</a>
+                                    <a href="guide-configure-printer.html"><span class="fa fa-print fa-fw"></span> Configuring Printers</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-mac.html">Reimage Mac</a>
+                                    <a href="guide-reimage-mac.html"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-windows.html">Reimage Windows</a>
+                                    <a href="guide-reimage-windows.html"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -223,4 +236,4 @@
                 <!-- /.sidebar-collapse -->
             </div>
             <!-- /.navbar-static-side -->
-		</nav>
+        </nav>
