--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,20 +168,20 @@
         <!-- /.page-wrapper -->
 
 		<!-- jQuery -->
-		<script type="text/javascript" src="/js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="/javascripts/jquery-3.2.0.min.js"></script>
 
 		<!-- Bootstrap Core JavaScript -->
-		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 
         <!-- metis Menu Plugin JavaScript -->
-        <script type="text/javascript" src="/js/metisMenu.min.js"></script>
+        <script type="text/javascript" src="/javascripts/metisMenu.min.js"></script>
 
         <!-- Morris Charts JavaScript -->
-        <script type="text/javascript" src="/js/raphael.min.js"></script>
-        <script type="text/javascript" src="/js/morris.min.js"></script>
-        <script type="text/javascript" src="/js/data/morrisData.js"></script>
+        <script type="text/javascript" src="/javascripts/raphael.min.js"></script>
+        <script type="text/javascript" src="/javascripts/morris.min.js"></script>
+        <script type="text/javascript" src="/javascripts/data/morrisData.js"></script>
 
         <!-- Sidebar JavaScript -->
-        <script type="text/javascript" src="/js/sideBar.js"></script>
+        <script type="text/javascript" src="/javascripts/sideBar.js"></script>
 	</body>
 </html>
