--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head lang="en">
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="description" content="Work log for Sunset Park Elementary School Admins to use.">
-		<meta name="keywords" content="work log">
-		<meta name="robots" content="index, follow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<base href="#">
-		<!-- TODO add an icon
-		<link rel="icon" href=""> -->
-		<title>Admin's Work Log</title>
-
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
-		
-        <!-- metisMenu CSS -->
-        <link rel="stylesheet" type="text/css" href="/stylesheets/metisMenu.min.css">
-
-		<!-- Custom CSS -->
-		<link rel="stylesheet" type="text/css" href="/stylesheets/worklog.css">
-
-        <!-- Morris Charts CSS -->
-        <link rel="stylesheet" type="text/css" href="/stylesheets/morris.css">
-		
-		<!-- Custom Fonts -->
-		<link rel="stylesheet" type="text/css" href="/stylesheets/font-awesome.min.css">
+		<% include templates/head.ejs %>
 	</head>
 	<body>
 		<% include templates/navigation.ejs %>
@@ -167,21 +143,6 @@
         </div>
         <!-- /.page-wrapper -->
 
-		<!-- jQuery -->
-		<script type="text/javascript" src="/javascripts/jquery-3.2.0.min.js"></script>
-
-		<!-- Bootstrap Core JavaScript -->
-		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-
-        <!-- metis Menu Plugin JavaScript -->
-        <script type="text/javascript" src="/javascripts/metisMenu.min.js"></script>
-
-        <!-- Morris Charts JavaScript -->
-        <script type="text/javascript" src="/javascripts/raphael.min.js"></script>
-        <script type="text/javascript" src="/javascripts/morris.min.js"></script>
-        <script type="text/javascript" src="/javascripts/data/morrisData.js"></script>
-
-        <!-- Sidebar JavaScript -->
-        <script type="text/javascript" src="/javascripts/sideBar.js"></script>
+		<% include templates/scripts.ejs %>
 	</body>
 </html>
