--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
         <div class="page-wrapper">
             <div class="container">
                 <div class="page-header">
-                    <h2>Please Sign In</h2>
+                    <h2><%= title %></h2>
                 </div> <!-- /.page-header -->
 
                 <!-- Login Panel -->
