Change all href to properly accomodate Express

--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -7,7 +7,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Work Log</a>
+                <a class="navbar-brand" href="/">Work Log</a>
             </div>
             <!-- /.navbar-header -->
             
@@ -82,7 +82,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a class="text-center" href="projects.html">
+                            <a class="text-center" href="/projects">
                                 <strong>See All Projects</strong>
                                 <i class="fa fa-angle-right"></i>
                             </a>
@@ -161,7 +161,7 @@
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="/"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -185,19 +185,19 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
+                            <a href="/"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="calendar.html"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
+                                    <a href="/calendar"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
                                 </li>
                                 <li>
-                                    <a href="projects.html"><span class="fa fa-tasks fa-fw"></span> Projects</a>
+                                    <a href="/projects"><span class="fa fa-tasks fa-fw"></span> Projects</a>
                                 </li>
                                 <li>
-                                    <a href="notifications.html"><span class="fa fa-bell fa-fw"></span> Notifications</a>
+                                    <a href="/notifications"><span class="fa fa-bell fa-fw"></span> Notifications</a>
                                 </li>
                                 <li>
-                                    <a href="tickets.html"><span class="fa fa-ticket fa-fw"></span> Tickets</a>
+                                    <a href="/tickets"><span class="fa fa-ticket fa-fw"></span> Tickets</a>
                                 </li>
                             </ul>
                         </li>
@@ -205,31 +205,31 @@
                             <a href="#"><i class="fa fa-question fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="guide-configure-ipads.html"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
+                                    <a href="/guide-configure-ipads"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
                                 </li>
                                 <li>
-                                    <a href="guide-configure-printer.html"><span class="fa fa-print fa-fw"></span> Configuring Printers</a>
+                                    <a href="/guide-configure-printer"><span class="fa fa-print fa-fw"></span> Configuring Printers</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-mac.html"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
+                                    <a href="/guide-reimage-mac"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
                                 </li>
                                 <li>
-                                    <a href="guide-reimage-windows.html"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
+                                    <a href="/guide-reimage-windows"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="interns.html"><i class="fa fa-vcard fa-fw"></i> Interns</a>
+                            <a href="/interns"><i class="fa fa-vcard fa-fw"></i> Interns</a>
                         </li>
                         <li>
-                            <a href="teachers.html"><i class="fa fa-users fa-fw"></i> Teachers</a>
+                            <a href="/teachers"><i class="fa fa-users fa-fw"></i> Teachers</a>
                         </li>
                         <li>
-                            <a href="links.html"><i class="fa fa-globe fa-fw"></i> Useful Links</a>
+                            <a href="/links"><i class="fa fa-globe fa-fw"></i> Useful Links</a>
                         </li>
                         <li>
-                            <a href="contact.html"><i class="fa fa-phone fa-fw"></i> Contact Us</a>
+                            <a href="/contact"><i class="fa fa-phone fa-fw"></i> Contact Us</a>
                         </li>
                     </ul>
                 </div>
