--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -185,7 +185,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="/"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="fa arrow"></span></a>
+                            <a href="/"><i class="fa fa-wrench fa-fw"></i> Tools<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/calendar"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
