--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -188,6 +188,9 @@
                             <a href="/"><i class="fa fa-wrench fa-fw"></i> Tools<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
+                                    <a href="/"><span class="fa fa-dashboard fa-fw"></span> Dashboard</a>
+                                </li>
+                                <li>
                                     <a href="/calendar"><span class="fa fa-calendar fa-fw"></span> Calendar</a>
                                 </li>
                                 <li>
