Change icon for "Guides" group to a book in sidebar

--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -205,7 +205,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-question fa-fw"></i> Guides<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-book fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/guide-configure-ipads"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
