Add backup computers to guides in sidebar

--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -208,10 +208,13 @@
                             <a href="#"><i class="fa fa-book fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="/guide-configure-ipads"><span class="fa fa-tablet fa-fw"></span> Configuring iPads</a>
+                                    <a href="/guide-backup-mac"><span class="fa fa-hdd-o fa-fw"></span> Backup Computers</a>
                                 </li>
                                 <li>
-                                    <a href="/guide-configure-printer"><span class="fa fa-print fa-fw"></span> Configuring Printers</a>
+                                    <a href="/guide-configure-ipads"><span class="fa fa-tablet fa-fw"></span> Configure iPads</a>
+                                </li>
+                                <li>
+                                    <a href="/guide-configure-printer"><span class="fa fa-print fa-fw"></span> Configure Printers</a>
                                 </li>
                                 <li>
                                     <a href="/guide-reimage-mac"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
