Fix missing images error

--- a/views/interns.ejs
+++ b/views/interns.ejs
@@ -12,7 +12,7 @@
                 </div>
                 <!-- /.col-lg-12 -->
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <img class="img-circle img-center" src="img/powerpuff_yong.png" alt="Yong Yi Kong's profile picture">
+                    <img class="img-circle img-center" src="/images/powerpuff_yong.png" alt="Yong Yi Kong's profile picture">
                     <h2>Yong Yi Kong</h2>
                     <h4><small>Former IT Intern</small></h4>
                     <p>
@@ -25,7 +25,7 @@
                 <!-- /.column control -->
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
                     <!-- TODO make a powerpuff image for David Rodriguez -->
-                    <img class="img-circle img-center" src="img/powerpuff_jose.png" alt="David Rodriguez's profile picture">
+                    <img class="img-circle img-center" src="/images/powerpuff_jose.png" alt="David Rodriguez's profile picture">
                     <h2>David Rodriguez</h2>
                     <h4><small>Current IT Intern</small></h4>
                     <p>
@@ -37,7 +37,7 @@
                 </div>
                 <!-- /.column control -->
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <img class="img-circle img-center" src="img/powerpuff_david_zhou.png" alt="David Zhou's profile picture">
+                    <img class="img-circle img-center" src="/images/powerpuff_david_zhou.png" alt="David Zhou's profile picture">
                     <h2>David Zhou</h2>
                     <h4><small>Current IT Intern</small></h4>
                     <p>
