--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -208,19 +208,19 @@
                             <a href="#"><i class="fa fa-book fa-fw"></i> Guides<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="/guide-backup-mac"><span class="fa fa-hdd-o fa-fw"></span> Backup Computers</a>
+                                    <a href="/guideBackup"><span class="fa fa-hdd-o fa-fw"></span> Backup Computers</a>
                                 </li>
                                 <li>
-                                    <a href="/guide-configure-ipads"><span class="fa fa-tablet fa-fw"></span> Configure iPads</a>
+                                    <a href="/guideConfigureIpads"><span class="fa fa-tablet fa-fw"></span> Configure iPads</a>
                                 </li>
                                 <li>
-                                    <a href="/guide-configure-printer"><span class="fa fa-print fa-fw"></span> Configure Printers</a>
+                                    <a href="/guideConfigurePrinter"><span class="fa fa-print fa-fw"></span> Configure Printers</a>
                                 </li>
                                 <li>
-                                    <a href="/guide-reimage-mac"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
+                                    <a href="/guideReimageMac"><span class="fa fa-apple fa-fw"></span> Reimage Mac</a>
                                 </li>
                                 <li>
-                                    <a href="/guide-reimage-windows"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
+                                    <a href="/guideReimageWindows"><span class="fa fa-windows fa-fw"></span> Reimage Windows</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
