--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="calendar.html">
+                        <a href="/calendar">
                             <div class="panel-footer">
                                 <span class="pull-left">View Calendar</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -49,7 +49,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="projects.html">
+                        <a href="/projects">
                             <div class="panel-footer">
                                 <span class="pull-left">View Projects</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="notifications.html">
+                        <a href="/notifications">
                             <div class="panel-footer">
                                 <span class="pull-left">View Notifications</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="tickets.html">
+                        <a href="/tickets">
                             <div class="panel-footer">
                                 <span class="pull-left">View Tickets</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
