Add content on backup

--- a/views/guideBackup.ejs
+++ b/views/guideBackup.ejs
@@ -9,6 +9,16 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= title %></h1>
+                    <div class="jumbotron">
+                        <p class="lead">MacOS and OS X</p>
+                        <hr>
+                        <p>Make a quick backup of important files by clicking and dragging the files over to an external hdd or usb.</p>
+                    </div>
+                    <div class="jumbotron">
+                        <p class="lead">Windows</p>
+                        <hr>
+                        <p>Backup windows computers with Windows Easy Transfer.</p>
+                    </div>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
