--- a/views/index.ejs
+++ b/views/index.ejs
@@ -207,8 +207,10 @@
 
 		<% include templates/scripts.ejs %>
 
-        // Function to get current date
-        // fills it into the calendar panel within the dashboard
+        <!-- TODO put this in JavaScript file
+        <!-- Function to get current date
+        fills it into the calendar panel within the dashboard
+        -->
         <script type="text/javascript">
             const monthName = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
             const currentDate = new Date();
