--- a/public/stylesheets/worklog.css
+++ b/public/stylesheets/worklog.css
@@ -21,6 +21,14 @@ body {
     border-left: 1px solid #e7e7e7;
   }
 }
+.lead {
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+.jumbotron {
+  padding: 4rem 2rem;
+}
 /*
 .navbar-top-links {
   margin-right: 0;
