Change panel text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <h3 id="calendarPanelLabel">26</h3>
-                                    <div>What's going on today!</div>
+                                    <div>Events happening today</div>
                                 </div>
                             </div>
                         </div>
