--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -211,7 +211,7 @@
                                     <a href="/guideBackup"><span class="fa fa-hdd-o fa-fw"></span> Backup Computers</a>
                                 </li>
                                 <li>
-                                    <a href="/guideConfigureIpads"><span class="fa fa-tablet fa-fw"></span> Configure iPads</a>
+                                    <a href="/guideConfigureIpad"><span class="fa fa-tablet fa-fw"></span> Configure iPads</a>
                                 </li>
                                 <li>
                                     <a href="/guideConfigurePrinter"><span class="fa fa-print fa-fw"></span> Configure Printers</a>
