--- a/public/stylesheets/worklog.css
+++ b/public/stylesheets/worklog.css
@@ -92,7 +92,7 @@ body {
 .sidebar .sidebar-search {
   padding: 15px;
 }
-.sidebar ul li a:focus, .sidebar ul li a:hover {
+.sidebar ul li a:focus, .sidebar ul li a:hover, .navbar-top-links li a:focus, .navbar-top-links li a:hover {
   background-color: #465C72;
 }
 .sidebar ul li {
