--- a/public/stylesheets/worklog.css
+++ b/public/stylesheets/worklog.css
@@ -99,7 +99,7 @@ body {
   border-bottom: 1px solid #e7e7e7;
 }
 .sidebar ul li a.active {
-  background-color: #465C72;
+  background-color: #337AB7;
 }
 .sidebar .arrow {
   float: right;
