--- a/public/stylesheets/worklog.css
+++ b/public/stylesheets/worklog.css
@@ -99,7 +99,7 @@ body {
   background-color: #465C72;
 }
 .sidebar ul li {
-  border-bottom: 1px solid #e7e7e7;
+  border-bottom: 1px solid #696969;
 }
 .sidebar ul li a.active {
   background-color: #337AB7;
