--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                         <div class="jumbotron">
-                            <form role="form" action="/users/login" method="POST">
+                            <form role="form" action="/login" method="POST">
                                 <fieldset>
                                     <!-- User ID -->
                                     <div class="input-group input-group-lg">
