Add name tags for login input

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,12 +19,12 @@
                                     <!-- User ID -->
                                     <div class="input-group input-group-lg">
                                         <span class="input-group-addon indent-username">User ID</span>
-                                        <input type="email" class="form-control" placeholder="Email Address">
+                                        <input type="email" class="form-control" placeholder="Email Address" name="username">
                                     </div><br> <!-- /.input-group -->
                                     <!-- User Password -->
                                     <div class="input-group input-group-lg">
                                         <span class="input-group-addon">Password</span>
-                                        <input type="password" class="form-control" placeholder="********">
+                                        <input type="password" class="form-control" placeholder="********" name="password">
                                     </div> <!-- /.input-group -->
                                     <br>
                                     <p>
