--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
 	<body>
 		<% include templates/navigation.ejs %>
         <div id="page-wrapper">
+            <% include templates/flashMessages.ejs %>
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= title %></h1>
