--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div class="page-wrapper">
+            <% include templates/flashMessages.ejs %>
             <div class="container">
                 <div class="page-header">
                     <h2><%= title %></h2>
