--- a/views/templates/flashMessages.ejs
+++ b/views/templates/flashMessages.ejs
@@ -1,5 +1,5 @@
 <% if(success_msg.length > 0) { %>
-                <div class="alert alert-danger alert-dismissible alert-fixed" role="alert">
+                <div class="alert alert-success alert-dismissible alert-fixed" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <%= success_msg %>
                 </div>
