--- a/views/guideConfigureIpad.ejs
+++ b/views/guideConfigureIpad.ejs
@@ -9,6 +9,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= title %></h1>
+                    <div class="jumbotron">
+                        <p class="lead">Apple Configurator</p>
+                        <hr>
+                        <p>Download the Apple Configurator app from the App Store to configure multiple iPads at once.</p>
+                    </div>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
