--- a/views/guideConfigurePrinter.ejs
+++ b/views/guideConfigurePrinter.ejs
@@ -9,6 +9,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= title %></h1>
+                    <div class="jumbotron">
+                        <p class="lead">Connect a printer to the wifi network</p>
+                        <hr>
+                        <p>Go to the printer settings. Menu -> Reports -> Network Setup Page. From there, print the network setup page. On the computer, add the hostname or IP address of the printer based on what's printed on the Network Setup Report.</p>
+                    </div>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
