--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -18,9 +18,9 @@
                     <ul>
                         <li class="prev">&#10094;</li>
                         <li class="next">&#10095;</li>
-                        <li>
-                            August<br>
-                            <span style="font-size:18px">2016</span>
+                        <li style="text-align: center">
+                            <%= month %><br>
+                            <span style="font-size:18px"><%= year %></span>
                         </li>
                     </ul>
                 </div>
