--- a/views/guideReimageMac.ejs
+++ b/views/guideReimageMac.ejs
@@ -9,6 +9,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header"><%= title %></h1>
+                    <div class="jumbotron">
+                        <p class="lead">Reimage Mac OS Computers</p>
+                        <hr>
+                        <p>Boot up into a separate Mac OS drive, then start Disk Utility. Disk Utility is nesseary to perform reimage operations. Select a version of OS X provided by the DOE then select a drive to restore. Once the process is completed, restart the computer and boot up into the restored drive.</p>
+                    </div>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
